correction message error displayed even on mobile

--- a/app/assets/stylesheets/components/_form_error.scss
+++ b/app/assets/stylesheets/components/_form_error.scss
@@ -1,6 +1,11 @@
 #error-code {
   margin-top: 15px 0 5px;
   text-align: center;
+
+  @media only screen and (max-width:768px){
+    position: absolute;
+    top: 25%;
+  }
 }
 
 #error-code, span.help-block, label.error {
